@@ -60,7 +60,7 @@ public class ValueGridPortrayal2D extends FieldPortrayal2D
         else throw new RuntimeException("Invalid field for ValueGridPortrayal2D: " + field);
         }
         
-    SimplePortrayal2D defaultPortrayal = new ValuePortrayal2D(this);
+    SimplePortrayal2D defaultPortrayal = new ValuePortrayal2D();
 
     public String valueName;
     
@@ -204,7 +204,7 @@ public class ValueGridPortrayal2D extends FieldPortrayal2D
         // the drawinfo that the object's portrayal will use -- we fill in the blanks later
         DrawInfo2D newinfo = new DrawInfo2D(new Rectangle2D.Double(0,0, xScale, yScale), info.clip);
         newinfo.location = locationToPass;
-        newinfo.fieldPortrayal = this;
+        newinfo.fieldPortrayal = this;	// crucial for ValuePortrayal2D to get the parent out
 
         Portrayal p = getPortrayalForObject(valueToPass);
         if (!(p instanceof SimplePortrayal2D))
