@@ -23,21 +23,28 @@ public class ValuePortrayal2D extends RectanglePortrayal2D
     {
     double level;
     boolean isTransparent;
-    public ValueGridPortrayal2D parent;
+	// public ValueGridPortrayal2D parent;  // no longer used
     
+	public ValuePortrayal2D() { }
+	
+	/** @deprecated
+	*/
     public ValuePortrayal2D(ValueGridPortrayal2D parent)
         {
         super(null);  // no color  -- we'll determine the color during portrayal
-        setParent(parent);
+        // setParent(parent);
         }
     
+	/** @deprecated does nothing now
+	*/
     public void setParent(ValueGridPortrayal2D parent)
         {
-        this.parent = parent;
+        // this.parent = parent;
         }
     
     public void draw(Object object, Graphics2D graphics, DrawInfo2D info)
         {
+		ValueGridPortrayal2D parent = (ValueGridPortrayal2D) (info.fieldPortrayal);
         double levelHere = ((MutableDouble)object).val;
         if (paint==null || level != levelHere)
             {
